# youtube2obsidian

./: .env.example  .gitignore  AGENTS.md  CLI.md  PLAN.md  README.md  pyproject.toml
src/youtube2obsidian/: __init__.py  cli.py  config.py  fetch.py  summarize.py  transcribe.py  writer.py
src/youtube2obsidian.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
